--- a/Main.html
+++ b/Main.html
@@ -12,8 +12,7 @@
 		<h1 id="title">Review Survey</h1>
 		<p id="description">This is a review Surevey of D3COD3 M3</p>
 		</div>
-		<a href="#survey-form" class="animation-controller">&times;</a>
-		<form action="/submit" class="survey-form" method="post" id="survey-form">
+		<form action="#survey-form" class="survey-form" method="post" id="survey-form">
 		<section>
 		<fieldset>
 		<legend>Your Information</legend>
@@ -43,7 +42,7 @@
 			<label for="skills">Your Review</label><br>
 			<textarea id="Message" name="text">Type Your Experience Here</textarea>
 			</fieldset>
-			<input type="submit" Value="Submit" id="submit">
+			<input type="submit" Value="Submit" id="survey-form"><a href="#survey-form" class="animation-controller">DONE</a>
 		</section>
 		</form>
 		<div class="success">SUCCESS</div>
